samples/_failures_safe/1761514031_e7d934_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33598e4a.c: In function ‘main’:
./samples/SAFE/__tmp_33598e4a.c:148:21: error: expected ‘;’ at end of input
  148 |     transpose_matrix
      |                     ^
      |                     ;
./samples/SAFE/__tmp_33598e4a.c:148:5: error: expected declaration or statement at end of input
  148 |     transpose_matrix
      |     ^~~~~~~~~~~~~~~~
